# okasaki

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
okasaki/defer/: __init__.py  suspension.py
okasaki/structures/: __init__.py  stream.py
tests/test_defer/: test_suspension.py
tests/test_structures/: test_stream.py
